--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 </head>
-<body class="bg-[#e3ded3] text-gray-900">
+<body>
   <div id="app"></div>
 
   <!-- Main Application Script -->
